Fix container height, prevents page from cropping

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,6 @@ p {
 
 .container {
     display: grid;
-    height: 100%;
     grid-template-columns: 200px 1fr 50px;
     grid-template-rows: 200px 1fr 2fr;
 }
